@B display correct symbols for .data/.bss refs.
If a reloc is present it is used to lookup the correct symbol.

--- a/binutils/configure.in
+++ b/binutils/configure.in
@@ -245,7 +245,7 @@ changequote([,])dnl
 	  DLLTOOL_DEFS="$DLLTOOL_DEFS -DDLLTOOL_ARM"
 	  BUILD_WINDRES='$(WINDRES_PROG)$(EXEEXT)'
 	  ;;
-  	arm*-* | xscale-* | strongarm-* | d10v-*)
+  	arm*-* | xscale-* | strongarm-* | d10v-* | m68*-*-amiga*)
 	  OBJDUMP_DEFS="-DDISASSEMBLER_NEEDS_RELOCS"
 	  ;;
 changequote(,)dnl
